--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -21,3 +21,10 @@ ru:
       discipline:
         name: Название
         description: Описание
+  views:
+    pagination:
+      first: "&laquo; Первая"
+      last: "Последняя &raquo;"
+      next: "Следующая &rsaquo;"
+      previous: "&lsaquo; Предыдущая"
+      truncate: "&hellip;"
