some improve with disciplines and docs. And media styles for header menu and logo was added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -42,6 +42,8 @@ ru:
         patronymic: Отчество
       doc:
         name: Название
+        discipline: Дисциплина
+        discipline_id: Дисциплина
       version:
         file: Файл
       discipline:
