devise more links was erased and teachers list now wirhout masonry

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,6 +40,7 @@ ru:
         first_name: Имя
         last_name: Фамилия
         patronymic: Отчество
+        remember_me: Запомнить меня
       doc:
         name: Название
         discipline: Дисциплина
