--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,6 +31,21 @@ ru:
         few: Сотрудника
         many: Сотрудников
         other: Сотрудники
+      news:
+        one: Новость
+        few: Новости
+        many: Новостей
+        other: Новости
+      timetable:
+        one: Расписание
+        few: Расписания
+        many: Расписаний
+        other: Расписания
+      page:
+        one: Страница
+        few: Страницы
+        many: Страниц
+        other: Страницы
     attributes:
       user:
         email: E-mail
@@ -66,6 +81,27 @@ ru:
         published: Опубликован
         position: Позиция
         contact_details: Контактные данные
+        created_at: Время создания
+        updated_at: Время изменения
+      news:
+        title: Заголовок
+        published: Опубликовано
+        views: Количество просмотров
+        short_description: Короткое описание (на странице всех новостей)
+        text: Текст новости (на странице отдельной новости)
+        created_at: Время создания
+        updated_at: Время изменения
+      timetable:
+        title: Заголовок
+        published: Опубликовано
+        code: HTML-код расписания
+        created_at: Время создания
+        updated_at: Время изменения
+      page:
+        title: Заголовок
+        permalink: Постоянная ссылка
+        published: Опубликовано
+        text: Текст страницы
         created_at: Время создания
         updated_at: Время изменения
   views:
